# src/routes/customers.js
@@ -2,7 +2,10 @@ const express = require('express');
 const router = express.Router();
 const { authenticateUser } = require('../middlewares/auth');
 const { validateUpdateCustomerData } = require('../middlewares/customers');
-const { getAllCustomers, getCustomerById, updateCustomerById } = require('../controllers/customers');
+const { getAllCustomers, 
+        getCustomerById, 
+        updateCustomerById, 
+        deleteCustomersByIds } = require('../controllers/customers');
 
 router.use(authenticateUser);
 
@@ -10,7 +13,9 @@ router.get('/customers/', getAllCustomers);
 
 router.get('/customers/:id', getCustomerById);
 
-router.put('/customers/:id', validateUpdateCustomerData, updateCustomerById);
+router.put('/customers/update/:id', validateUpdateCustomerData, updateCustomerById);
+
+router.delete('/customers/delete/:id', deleteCustomersByIds);
 
 
 module.exports = router;
